[metadata]
name = pyMetrohmAUTOLAB
version = 0.0.2
author = Jonah Liu
author_email = jonahliu@outlook.com
description = A tool to using Metrohm AUTOLAB SDK in Python(it is still under heavily developed)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shuayliu/pyMetrohmAUTOLAB
project_urls =
    Bug Tracker = https://github.com/shuayliu/pyMetrohmAUTOLAB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research



[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pythonnet

[options.packages.find]
where = src