[metadata]
name = pymetrohmautolab
version = 0.1.0
author = Shuay Liu
author_email = shuayliu+frompypi@outlook.com
description = A Python wrapper for Metrohm Autolab potentiostat control via .NET SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shuayliu/pymetrohmautolab
project_urls =
    Bug Tracker = https://github.com/shuayliu/pymetrohmautolab/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7
install_requires =
    pythonnet

[options.packages.find]
where = src
